# Software-Architecture-with-Cpp

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  default.nix
3rd-parties/jaeger-client-cpp-0.7.0/: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .travis.yml  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.plugin  README.md  RELEASE.md  codecov.yml
3rd-parties/jaeger-client-cpp-0.7.0/.github/workflows/: macos.yml  ubuntu.yml  windows.yml
3rd-parties/jaeger-client-cpp-0.7.0/cmake/: CodeCoverage.cmake  Config.cmake.in  Findthrift.cmake  toolchain.cmake
3rd-parties/jaeger-client-cpp-0.7.0/cmake/Hunter/: config.cmake
3rd-parties/jaeger-client-cpp-0.7.0/crossdock/: Dockerfile  Server.cpp  Server.h  docker-compose.yml
3rd-parties/jaeger-client-cpp-0.7.0/examples/: App.cpp
3rd-parties/jaeger-client-cpp-0.7.0/scripts/: build-plugin.sh  build.sh  clang-format.sh  clang-tidy.sh  thrift-gen.patch  update-license.py  update-licenses.sh  upload-coverage.sh
3rd-parties/jaeger-client-cpp-0.7.0/src/jaegertracing/: Compilers.h  Config.cpp  Config.h  ConfigTest.cpp  Constants.h.in  DynamicLoad.cpp  DynamicallyLoadTracerTest.cpp  LogRecord.cpp  LogRecord.h  Logging.cpp  Logging.h  Reference.cpp  Reference.h  ReferenceTest.cpp  Sender.cpp  Sender.h  Span.cpp  Span.h  SpanContext.cpp  SpanContext.h  SpanContextTest.cpp  SpanTest.cpp  Tag.cpp  Tag.h  TagTest.cpp  ThriftMethods.cpp  ThriftSender.cpp  ThriftSender.h  ThriftSenderTest.cpp  TraceID.cpp  TraceID.h  TraceIDTest.cpp  Tracer.cpp  Tracer.h  TracerFactory.cpp  TracerFactory.h  TracerFactoryTest.cpp  TracerTest.cpp
3rd-parties/redis-cpp/: .gitignore  CMakeLists.txt  LICENSE  README.md
3rd-parties/redis-cpp/cmake/: redis-cpp-config.cmake.in
3rd-parties/redis-cpp/examples/ping/: CMakeLists.txt
3rd-parties/redis-cpp/examples/pipeline/: CMakeLists.txt
3rd-parties/redis-cpp/examples/pubsub/: CMakeLists.txt
3rd-parties/redis-cpp/examples/resp/: CMakeLists.txt
3rd-parties/redis-cpp/examples/setget/: CMakeLists.txt
3rd-parties/redis-cpp/include/redis-cpp/: execute.h  stream.h  value.h
3rd-parties/redis-cpp/redis-docker/: Dockerfile  build.sh  run.sh
3rd-parties/redis-cpp/src/redis-cpp/: stream.cpp
3rd-parties/redis-cpp/test/package/: This.cmake.in
Chapter01/: CMakeLists.txt  README.md
Chapter01/cc/cohesion/: high.cpp  low.cpp
Chapter01/cc/coupling/: loose.cpp  tight.cpp
Chapter01/docs/: notes.md
Chapter01/philosophy/algorithms/: bad_dots.cpp  good_dots.cpp
Chapter01/philosophy/time/: bad_time.cpp
Chapter01/solid/dip/: bad.cpp  dynamic_di.cpp
Chapter01/solid/lsp/: bad_substitution.cpp
Chapter01/solid/ocp/: ostream_op_preferred.cpp  ostream_op_private_access_needed.cpp
Chapter02/: CMakeLists.txt  README.md
Chapter02/state/: PaymentCalculatorV1.h  PaymentCalculatorV2.h
Chapter03/doc/: CMakeLists.txt  conf.py.in
Chapter06/: 01_raii_guards.cpp  02_copy_move.cpp  03_rules_of_5_and_0.cpp  05_niebloids.cpp  06_policy-based_design.cpp  07_static_polymorphism.cpp  10_factory_class.cpp  11_builder.cpp  12_state_and_visitation.cpp  13_memory_arenas.cpp  CMakeLists.txt  README.md  conanfile.txt
Chapter08/customer/: CMakeLists.txt  conanfile.txt
Chapter08/customer/conan/: conanfile.py.in
Chapter08/customer/conan/test_package/: conanfile.py
Chapter08/customer/src/customer/: CMakeLists.txt  lib.cpp  main.cpp
Chapter08/customer/test/: CMakeLists.txt
Chapter08/customer/test/customer/: CMakeLists.txt  gmock.cpp
Chapter08/mobile_app/test/merchants/: CMakeLists.txt  fake_customer_review_store.h
Chapter10/mobile_app/: CMakeLists.txt  conanfile.txt
Chapter10/mobile_app/include/merchants/: reviews.h  visited_merchant_history.h
Chapter10/mobile_app/src/: CMakeLists.txt
Chapter10/mobile_app/src/merchants/: CMakeLists.txt  reviews.cpp  visited_merchant_history.cpp
Chapter11/: CMakeLists.txt  README.md  conanfile.txt
Chapter11/coroutines/: main_1.cpp
Chapter11/microbenchmarking/: main_1.cpp  main_2.cpp  main_3.cpp
Chapter12/s3/: CMakeLists.txt  s3.cpp
Chapter13/: CMakeLists.txt  README.md  conanfile.txt
Chapter13/grpc/: service.proto
Chapter13/redis/: redis.cpp
Chapter15/customer/: CMakeLists.txt  README.md
ch02/: CMakeLists.txt  README.md  conanfile.txt
ch02/grpc/: .gitignore  AsyncClient.cpp  AsyncServer.cpp  Makefile  service.proto
ch02/rest/: .gitignore  CppRestSdkReadPage.cpp  CppRestSdkSimpleService.cpp  Makefile
ch02/soap/: fooRequest.xml  fooResponse.xml  myApiWsdl.xml
ch02/srp/: PaymentCalculatorV1.h  PaymentCalculatorV2.h  PaymentCalculatorV3.h
ch02/state/: PaymentCalculatorV3.h
ch03/: CMakeLists.txt  README.md
ch03/doc/: CMakeLists.txt  api_reference.rst  conf.py.in  index.rst
ch03/include/breathe_demo/: demo.h
ch03/src/: demo.cpp
ch05/: CMakeLists.txt  README.md
ch05/3rd-parties/: README.md
ch05/3rd-parties/gsl/: LICENSE
ch05/src/: 1_base.cpp  2_ranges_part_1.cpp  3_ranges_part_2.cpp  4_concepts.cpp
ch05/src/5_modules/: main.cpp  merchant.cpp  store.cpp
ch05/src/apis/: declarative.cpp  optional.h  raii.h
ch07/customer/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  stop.sh
ch07/customer/cmake/: FetchGTest.cmake
ch08/: CMakeLists.txt  README.md  conanfile.txt
ch08/cmake/: FetchGTest.cmake
ch08/customer/: CMakeLists.txt  build.sh  conanfile.txt  run.sh
ch08/customer/cmake/: CustomerConfig.cmake.in  FetchCppUnit.cmake
ch08/customer/conan/: conanfile.py.in
ch08/customer/test/: CMakeLists.txt
ch08/include/customer/: customer.h
ch08/mobile_app/: CMakeLists.txt  conanfile.txt
ch08/mobile_app/test/: CMakeLists.txt
ch08/src/customer/: CMakeLists.txt  main.cpp
ch08/test/: CMakeLists.txt
ch08/test/customer/: CMakeLists.txt  catch.cpp
ch11/mobile_app/: CMakeLists.txt  conanfile.txt
ch11/mobile_app/cmake/: CommonCompileFlags.cmake  FetchGTest.cmake
ch11/mobile_app/src/: CMakeLists.txt
ch11/mobile_app/test/: CMakeLists.txt
ch11/test/customer/: CMakeLists.txt  catch.cpp  compiletime.cpp  cppunit.cpp  doctest.cpp  gmock.cpp  gtest.cpp
(+471 files in other folders)
